# WGPU-2D-Pixel-Art-Proof-of-Concept

./: Cargo.toml  README.md  debug_renderdoc_settings.cap
assets/tiles/: enviroment.tsx  untitled..tmj  untitled.json  untitled.tmx
pyxl/: Cargo.toml
pyxl/src/: input.rs  lib.rs  math.rs
pyxl/src/graphics/: mod.rs
pyxl/src/graphics/downscale/: vertex.rs
pyxl/src/graphics/pixel_art/: sprite.wgsl  sprite_sheet.rs  sprite_sheet.wgsl  tilemap.rs
reference/: mock_up.png-autosave.kra
src/: file_system.rs  game.rs  input.rs  lib.rs  main.rs  math.rs  player.rs
src/graphics/: gpu_texture.rs  mod.rs  save.rs  sprite.rs  texture.rs  upscaling.wgsl  vertex.rs
src/graphics/downscale/: downscale.wgsl  mod.rs
src/graphics/pixel_art/: mod.rs  sprite.rs  texture.rs  tile_layer.wgsl
