[package]
edition = "2021"
name = "cowboy_dot_exe"
version = "0.1.0"

[dependencies]
cfg-if = "1"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13"
winit = "0.26"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
glam = "0.21"
gilrs = "0.9.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[target]
[target."cfg(target_arch = \"wasm32\")"]
[target."cfg(target_arch = \"wasm32\")".dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"

[target."cfg(target_arch = \"wasm32\")".dependencies.web-sys]
features = ["Document", "Window", "Element"]
version = "0.3"

[target."cfg(target_arch = \"wasm32\")".dependencies.wgpu]
features = ["webgl"]
version = "0.13"
